--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-      font-family: "Licorice", cursive;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Licorice", cursive;
   font-weight: 400;
   font-style: normal;
-  font-size: large;
 }
 
 .licorice-regular {
@@ -16,34 +15,117 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url('background.jpg');
-    background-size: cover;
-    background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url("background.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
-    width: 420px;
-    border: 2px solid gray;
-    border-radius: 10px;
-    color: #ffff;
-    padding: 30px 40px;
-    -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
-    box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-
+  width: 420px;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  color: #ffff;
+  padding: 30px 40px;
+box-shadow: 1px 1px 106px 39px rgba(0,0,0,0.6) inset;
+-webkit-box-shadow: 1px 1px 106px 39px rgba(0,0,0,0.6) inset;
+-moz-box-shadow: 1px 1px 106px 39px rgba(0,0,0,0.6) inset;
+  backdrop-filter: blur(50px);
 }
 
 .container h1 {
-    font-size: 36px;
-    text-align: center;
+  font-size: 36px;
+  text-align: center;
+  background-color: transparent;
 }
 
 .input-box {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin: 30px 0;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 30px 0;
+}
+
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: 2px solid #ffff;
+  border-radius: 40px;
+  outline: none;
+  font-size: 16px;
+  color: #ffff;
+  padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder {
+  color: #ffff;
+}
+
+.input-box span {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #fff;
+}
+
+.remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  margin: -15px 0 15px 0;
+}
+
+.remember-forgot label input {
+  accent-color: #ffff;
+  margin-right: 5px;
+}
+
+.remember-forgot a {
+  text-decoration: none;
+  color: #ffff;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.login {
+  width: 100%;
+  height: 50px;
+  background-color: #fff;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: bold;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login:hover {
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  color: #fff;
+  transition: 0.3s;
+}
+
+.register-link {
+  font-size: 14px;
+  text-align: center;
+  margin: 20px 0 15px;
+}
+
+.register-link a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+}
+
+.register-link a:hover {
+  text-decoration: underline;
 }
